Enhance application configuration and security; set default timezone, improve CORS settings, and add logging for authentication failures